--- a/0x07-python-test_driven_development/.gitattributes
+++ b/0x07-python-test_driven_development/.gitattributes
@@ -1,1 +1,2 @@
 *.deb filter=lfs diff=lfs merge=lfs -text
+0x07-python-test_driven_development/gcm-linux_amd64.2.0.785.deb filter=lfs diff=lfs merge=lfs -text
